--- a/style.css
+++ b/style.css
@@ -40,9 +40,26 @@ body {
   display: inline-block;
   background-color: #563264;
   color: white;
-  padding: 12px;
+  padding: 15px;
   text-align: center;
   border-radius: 9px;
+  margin: 35px 0;
+  background-color: #563264;
+  text-align: center;
+  border-radius: 9px;
+  color: white;
+  font-size: 15px;
+  letter-spacing: 2px;
+  font-family: myFont;
+  box-shadow: 1px 0.5px 10px black;
+  border: none;
+  outline: none;
+}
+
+.connect-btn:hover {
+  transform: scale(1.1);
+  background-color: rgb(67, 32, 80);
+  cursor: pointer;
 }
 
 .container {
@@ -67,6 +84,7 @@ body {
   display: flex;
   /* justify-content:space-between; */
   justify-content: center;
+  margin: 35px 0;
   gap: 35%;
 }
 
