--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 .nav {
   text-align: center;
   width: 100%;
-  padding: 1px 0;
+  padding: 25px 5px;
   background: rgba(64, 0, 90, 0.585);
   backdrop-filter: blur(2px);
   border: 2px solid rgba(255, 255, 255, 0.05);
